0.6.0 (currently working on)
- [#1032] Change: Handle people that are on the waiting list
- [#1029] Feature: When a user unregisters, make the first person in the queue a regular attendee
- [#1031] Feature: Registration queue: Users should be able to sign up for full-booked events if there are still vacancies in the waiting list
- [#636] Change: Remove surplus empty parameters from exec_SELECTquery calls, patch by Saskia Metzler
- [#903] Change: Add scope="col" to TH elements in the list view, patch by Saskia Metzler
- [#412] Change: Use the config getter instead of the registration manager in pi1::searchWhere to retrieve configuration data from plugin.tx_seminars
- [#1170] Change: Switch the order of the buttons on the unregistration page
- [#1179] Change: Move isUnregistrationPossible() to tx_seminars_seminar
- [#1026] Feature: Add configuration: unregistration deadline
- [#1162] Fix: Cannot register for open-ended events
- [#1058] Change: Added helper function to convert boolean values into text
- [#257] Change: Catch empty config value for event-type
- [#1027] Change: When a user unregisters, hide the registration record
- [#1149] Fix: Registrations in mod2 show the event date's title instead of the topic title
- [#400] Feature: FE users (participants) should be able to unregister from an event (remove their registration)
- [#1143] Change: Sorting for registrations in mod2 and the list view should be descending by crdate
- [#501] Change: Changed the references to locallang*.php to locallang*.xml
- [#210] Change: Cleaned up the locallang*.xml files
- [#212] Fix: Fallback to default language doesn't work consistently
- [#1222] Fix: In the template helper class, provide default values for templateCode and markerNames
- [#1108] Fix: Number of seats in the "my events" view is incorrect for multi-registration events
- [#773] Change: Make our enableFields() wrapper use $GLOBALS['TSFE'] and a singleton cache
- [#1096] Fix: Wrong message in configcheck::hideFields()