@@ -149,6 +149,16 @@ final class tx_seminars_seminarchild extends tx_seminars_seminar {
 		$this->numberOfAttendances = $number;
 		$this->statisticsHaveBeenCalculated = true;
 	}
+
+	/**
+	 * Sets the number of attendances on the registration queue.
+	 *
+	 * @param	integer		number of attendances on the registration queue
+	 */
+	public function setNumberOfAttendancesOnQueue($number) {
+		$this->numberOfAttendancesOnQueue = $number;
+		$this->statisticsHaveBeenCalculated = true;
+	}
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminarst/tests/fixtures/class.tx_seminars_seminarchild.php']) {
